# BlueprintX-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  init-db.sql
python/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
python/app/: __init__.py  config.py  dependencies.py  errors.py  logging.py  main.py  security.py
python/app/cache/: __init__.py  redis.py
python/app/documents/: __init__.py  chunker.py  pdf.py
python/app/gemini/: __init__.py  client.py  embeddings.py  schemas.py
python/app/graphs/: __init__.py  analysis.py  extraction.py  ingest.py  qna.py
python/app/jobs/: __init__.py  dlq.py  models.py  runner.py  store.py
python/app/prompts/: __init__.py  materials.py  milestones.py  plan_summary.py  qna.py  rooms.py  tender_scope_doc.py  trade_scopes.py  vision_ocr.py
python/app/routes/: __init__.py  dlq.py  documents.py  health.py  jobs.py  plan.py  qna.py  tenders.py
python/app/schemas/: __init__.py  extraction.py
python/app/vectorstore/: __init__.py  base.py  pgvector.py
rust/: .env.example  Cargo.toml  Dockerfile
rust/src/: app.rs  config.rs  db.rs  error.rs  logging.rs  main.rs
rust/src/api/: mod.rs  pagination.rs  response.rs
rust/src/auth/: claims.rs  context.rs  jwks.rs  middleware.rs  mod.rs
rust/src/domain/: admin.rs  ai.rs  auth.rs  bids.rs  documents.rs  extraction.rs  hiring.rs  jobs.rs  marketplace.rs  mod.rs  notifications.rs  profiles.rs  projects.rs  rfis.rs  settings.rs  subcontractors.rs  tasks.rs  tenders.rs
rust/src/middleware/: mod.rs  request_id.rs
rust/src/routes/: admin.rs  ai.rs  auth.rs  bids.rs  documents.rs  extraction.rs  health.rs  hiring.rs  jobs.rs  marketplace.rs  me.rs  mod.rs  notifications.rs  profiles.rs  projects.rs  rfis.rs  settings.rs  subcontractors.rs  tasks.rs  tenders.rs
rust/src/services/: ai_client.rs  cache.rs  mod.rs  notifications.rs
