[package]
name = "blueprintx-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util", "propagate-header", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "rust_decimal"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# JWT / Auth
jsonwebtoken = "9"

# HTTP Client (for AI service calls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["db-postgres"] }
thiserror = "1.0"
anyhow = "1.0"
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Async utilities
parking_lot = "0.12"
futures = "0.3"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
